model-inference-manifests/qna_dep_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: serving-model-env
spec:
  selector:
    app: model-inference
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30008
  type: NodePort
