model-inference-manifests/qna_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qna-ingress
  namespace: training-env
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: qna-model.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: model-service
            port:
              number: 5000
